# Nexus-Latam

./: .env.example  .gitignore  HANDOFF.md  Lista de Puntos.md  NEXUS_LATAM_Proyecto_Completo.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.claude/: settings.json
.cursor/skills/nexus-rare/: SKILL.md
.github/workflows/: ci.yml
apps/agents/: package.json  tsconfig.json
apps/agents/orchestrator/: nexus.orchestrator.ts
apps/agents/services/: arbitrum.service.ts  bitso.service.ts  rare.service.ts
apps/api/: Dockerfile  index.ts  package.json
apps/api/routes/: nexus.routes.ts
apps/contracts/: Cargo.toml
apps/contracts/scripts/: deploy.sh  verify.sh
apps/contracts/src/: batch_payment.rs  compliance_registry.rs  events.rs  lib.rs  nexus_vault.rs  trade_escrow.rs
apps/contracts/tests/: batch_payment_test.rs  integration_test.rs  trade_escrow_test.rs
apps/frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/frontend/__tests__/: nexus-protocol.test.ts  utils.test.ts
apps/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  template.tsx
apps/frontend/components/: AgentGrid.tsx  AgentStatusPanel.tsx  AuditTrailTable.tsx  ComplianceNFTCard.tsx  ConnectButton.tsx  FadeIn.tsx  Footer.tsx  HeroSection.tsx  LiveFXTicker.tsx  LiveTicker.tsx  NFTShowcase.tsx  Navbar.tsx  ProtocolFeatures.tsx  Skeleton.tsx  ToastProvider.tsx  TradeCard.tsx  TradeCreator.tsx  WagmiProvider.tsx
apps/frontend/hooks/: useAgentEvents.ts  (+4 more)
(+23 files in other folders)
