[package]
name = "nexus-latam-contracts"
version = "1.0.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.6.0", features = ["export-abi"] }
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-sol-types = { version = "0.7.6", default-features = false }
sha3 = "0.10"
hex = "0.4"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[[bin]]
name = "nexus"
path = "src/lib.rs"
